test/mutation_analysis/s0171_excel_sheet_column_number/hafis/ablation_o3_r50/mutants/6/result.txt
./test/mutation_analysis/s0171_excel_sheet_column_number/hafis/ablation_o3_r50/mutants/6/Solution.java:22: error: unreachable statement
        return num;
        ^
1 error
